# weichatrobot

./: Cargo.toml  config.toml  xuexi.txt
examples/: webhook.rs  xuexirobot.rs
src/: curl.rs  lib.rs  message.rs
