[package]
name = "weichatrobot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
serde_json = "1.0.108"
serde = { version = "1.0.190", features = ["derive"] }
base64 = "0.21.5"
md5 = "0.7.0"

[[example]]
name = "webhook"

